# hello-vcpkg

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  main.cpp
.devcontainer/: devcontainer.json
.devcontainer/docker/: docker-compose.local.yaml  dockerfile.dev
src/: main.cpp
